<resources>
    <string name="app_name" translatable="false">ForPrompt</string>
    <string name="title_prompt">Prompt</string>
    <string name="title_edit">Edit</string>
    <string name="title_settings">Settings</string>
    <string name="prompt_default_text" translatable="false">
Hi. Here is the ForPrompt software for Fortinge Tablet Prompter. It is brandnew and for free, plus easy to use and more important is simple.

It has the flip mirror feature in both vertical and horizontal positioning. The speed, font size and the colour of the script can be managed.

It is up to your wish to arrange the speed with a suitable bluetooth remote hand controller.

You may also copy and paste the text. Moreover you may start the countdown if you have a limited time.


Здравствуй. Вот программное обеспечение ForPrompt для Fortinge Tablet Prompter. Это совершенно новое и бесплатное приложение, а также простое в использовании и более простое.

Он имеет функцию откидного зеркала как в вертикальном, так и в горизонтальном положении. Скорость, размер шрифта и цвет скрипта можно управлять.

Вы можете настроить скорость с помощью подходящего пульта дистанционного управления Bluetooth.

Вы также можете скопировать и вставить текст. Кроме того, вы можете начать обратный отсчет, если у вас есть ограниченное время.


你好 這是Fortinge平板電腦提示器的ForPrompt軟件。 它是全新的，免費的，而且易於使用，更重要的是操作簡單。

它在垂直和水平位置均具有翻轉鏡功能。 可以管理腳本的速度，字體大小和顏色。

您可以根據需要選擇合適的藍牙遙控器來調節速度。

您也可以復制並粘貼文本。 此外，如果時間有限，您可以開始倒計時。


გამარჯობა აქ არის ForPrompt პროგრამა Fortinge Tablet Prompter. ეს არის ბრენდის ახალი და უფასო, პლუს მარტივი და უფრო მნიშვნელოვანი მარტივი.

მას აქვს flip სარკის ფუნქცია როგორც ვერტიკალურ, ისე ჰორიზონტალურ მდგომარეობაში. მართებულია სცენარის სიჩქარე, შრიფტი და ფერი.

თქვენი სურვილია სიჩქარის მოწყობა შესაბამისი Bluetooth დისტანციური კონტროლერით.

თქვენ ასევე შეგიძლიათ ტექსტის კოპირება და ჩასმა. უფრო მეტიც, თქვენ შეგიძლიათ დაიწყოთ Countdown, თუ თქვენ გაქვთ შეზღუდული დრო.


Merhaba. İşte Fortinge Tablet Prompter için ForPrompt yazılımı. Yepyeni ve ücretsiz, ayrıca kullanımı çok kolay.

Hem dikey hem de yatay konumda ve aynalama özelliklerine sahiptir. Komut dosyasının hızı, yazı tipi boyutu ve rengi yönetilebilir.

Dilerseniz uygun bir bluetooth el kumandası ile uzaktan hız kontrolü de yapabilirsiniz.

Ayrıca metni kopyalayıp yapıştırabilirsiniz. Sınırlı bir zamanınız varsa geri sayım özelliğini de kullanabilirsiniz.


Bonjour. Voici le logiciel ForPrompt pour Fortinge Tablet Prompter. Il est tout neuf et gratuit, plus facile à utiliser et plus important est simple.

Il a la fonction de miroir basculant en position verticale et horizontale. La vitesse, la taille de la police et la couleur du script peuvent être gérées.

Cest à votre souhait darranger la vitesse avec une télécommande Bluetooth appropriée.

Vous pouvez également copier et coller le texte. De plus, vous pouvez démarrer le compte à rebours si vous avez un temps limité.
 </string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="toolbar_text">SETTINGS</string>
    <string name="background_color">Background Color</string>
    <string name="text_color">Text Color</string>
    <string name="right_to_left">Right-to-Left (RTL)</string>
    <string name="margins">Margins (%)</string>
    <string name="show_scroll">Show Scroll</string>
    <string name="loop">Loop</string>
    <string name="countdown">Countdown</string>
    <string name="speed_rate">Speed Rate</string>
    <string name="bluetooth_device">Bluetooth Device</string>
    <string name="trademark_rights" translatable="false">FORTINGE is a registered trademark of AKRATEK. Copyright© 2021. All rights reserved.</string>
    <string-array name="speed_rate_spinner">
        <item>¼ x</item>
        <item>½ x</item>
        <item>1 x</item>
        <item>2 x</item>
        <item>4 x</item>
    </string-array>
    <string name="dummy_button" translatable="false">Dummy Button</string>
    <string name="dummy_content" translatable="false">DUMMY\nCONTENT</string>
    <string name="title_activity_countdown" translatable="false">FullscreenActivity</string>
    <string name="show_system_information"><u>Show system information!</u></string>
    <string name="top">Top</string>
    <string name="bottom">Bottom</string>
    <string name="flip">Flip</string>
    <string name="mirror">Mirror</string>
    <string name="open">Open</string>
    <string name="clear">Clear</string>
    <string name="center">Center</string>
    <string name="save">Save</string>
    <string name="bold">Bold</string>
    <string name="copy">Copy</string>
    <string name="paste">Paste</string>
    <string name="b" translatable="false">B</string>
    <string name="abc" translatable="false">ABC</string>
    <string name="bluetooth_controller">BLUETOOTH CONTROLLER</string>
    <string name="about">ABOUT</string>
    <string name="selectafile">Select a file</string>
    <string name="opensettings">Open settings</string>
    <string name="cancel">Cancel</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="textcopiedtoclipboard">Text copied to clipboard.</string>
    <string name="textpastedfromclipboard">Text pasted from clipboard.</string>
    <string name="pathiswrong">Path is wrong!</string>
    <string name="openlocationservice">Please open location service!</string>
    <string name="entervalue">Please enter value.</string>
    <string name="systeminfo">System Info</string>
    <string name="devicemodel">Device Model</string>
    <string name="androidversion">Android Version</string>
    <string name="supportedremotecontroller">Supported remote controller</string>
   <string name="close">Close</string>
   <string name="continu">Continue</string>
    <string name="cue_indicator">Cue Indicator</string>
    <string name="general">General</string>
    <string name="str_ok">OK</string>
    <string name="str_cancel">Cancel</string>
    <string name="permission_txt">The ForPrompt Tablet Prompter app collects location data to enable bluetooth even when turned off or not in use.</string>
</resources>