<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_prompt">

    <fragment
        android:id="@+id/navigation_prompt"
        android:name="com.fortinge.prompter.ui.PromptFragment"
        android:label="@string/title_prompt"
        tools:layout="@layout/fragment_prompt" />

    <fragment
        android:id="@+id/navigation_edit"
        android:name="com.fortinge.prompter.ui.EditFragment"
        android:label="@string/title_edit"
        tools:layout="@layout/fragment_edit" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.fortinge.prompter.ui.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>